# zomercompetitie

./: .gitignore  README.html  main.py  pyproject.toml
scripts/: install_ubuntu.sh  update_ubuntu.sh
src/zomercompetitie/: app.py  db.py  models.py  services.py  update_checker.py.org
src/zomercompetitie.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
static/: app.css  app.js  sw.js
templates/: admin.html  base.html  dashboard.html  evening_detail.html  login.html  season_detail.html
tests/: test_services.py  test_update_checker.py
